Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -645,20 +645,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cards_df.set_index('card_id', inplace = True)\n",
-    "dust_df.set_index('card_id', inplace = True)\n",
+    "# dust_df.set_index('card_id', inplace = True)\n",
     "# entourages_df.set_index('card_id', inplace = True)\n",
     "# mechanics_df.set_index('card_id', inplace = True)\n",
-    "# play_requirements_df.set_index('card_id', inplace = True)"
+    "play_requirements_df.set_index('card_id', inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        "KARA_00_07                  NaN     NaN         NaN  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        "BRM_010t2  CRAFTING_NORMAL    40"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
