--- a/index.ipynb
+++ b/index.ipynb
@@ -1032,7 +1032,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cards_with_mechanics_df = card\n",
+    "cards_with_mechanics_df = cards_df.join(mechanics_df, )\n",
     "cards_with_mechanics_df"
    ]
   },
