--- a/index.ipynb
+++ b/index.ipynb
@@ -2918,7 +2918,7 @@
     "\n",
     "Write your answer below this line:\n",
     "\n",
-    "Because the new df exludes records that do not have a corresponding record in mechanics\n",
+    "Because the new df exludes records that do not have a corresponding record in mechanics_df\n",
     "________________________________________________________________________________\n",
     "\n",
     "First performed an inner join, which only includes records that are present in both tables.  Although there were 2819 records in the left table, there were only 1079 records that existed in both tables, which are what you see in the resulting dataframe. \n",
