Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2932,7 +2932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2940,36 +2940,36 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 1226 entries, AT_002 to tt_010\n",
+      "Index: 793 entries, AT_001 to XXX_112\n",
       "Data columns (total 20 columns):\n",
-      "player_class            1226 non-null object\n",
-      "type                    1226 non-null object\n",
-      "name                    1226 non-null object\n",
-      "set                     1226 non-null object\n",
-      "text                    1189 non-null object\n",
-      "cost                    1157 non-null float64\n",
-      "attack                  968 non-null float64\n",
-      "health                  952 non-null float64\n",
-      "rarity                  886 non-null object\n",
-      "collectible             825 non-null float64\n",
-      "flavor                  825 non-null object\n",
-      "race                    215 non-null object\n",
-      "how_to_earn             143 non-null object\n",
-      "how_to_earn_golden      178 non-null object\n",
-      "targeting_arrow_text    123 non-null object\n",
-      "faction                 68 non-null object\n",
-      "durability              21 non-null float64\n",
-      "mechanic                1226 non-null object\n",
-      "play_requirement        279 non-null object\n",
-      "value                   279 non-null float64\n",
-      "dtypes: float64(6), object(14)\n",
-      "memory usage: 201.1+ KB\n"
+      "play_requirement        793 non-null object\n",
+      "value                   793 non-null int64\n",
+      "player_class            279 non-null object\n",
+      "type                    279 non-null object\n",
+      "name                    279 non-null object\n",
+      "set                     279 non-null object\n",
+      "text                    279 non-null object\n",
+      "cost                    279 non-null float64\n",
+      "attack                  225 non-null float64\n",
+      "health                  223 non-null float64\n",
+      "rarity                  254 non-null object\n",
+      "collectible             244 non-null float64\n",
+      "flavor                  244 non-null object\n",
+      "race                    28 non-null object\n",
+      "how_to_earn             35 non-null object\n",
+      "how_to_earn_golden      45 non-null object\n",
+      "targeting_arrow_text    122 non-null object\n",
+      "faction                 24 non-null object\n",
+      "durability              2 non-null float64\n",
+      "mechanic                279 non-null object\n",
+      "dtypes: float64(5), int64(1), object(14)\n",
+      "memory usage: 130.1+ KB\n"
      ]
     }
    ],
    "source": [
-    "left_join_df = cards_with_mechanics_df.join(play_requirements_df)\n",
-    "left_join_df = cards_with_mechanics_df.join(play_requirements_df)\n",
+    "# left_join_df = cards_with_mechanics_df.join(play_requirements_df)\n",
+    "left_join_df = play_requirements_df.join(cards_with_mechanics_df)\n",
     "left_join_df.info()"
    ]
   },
